Make sure that logo doesn't deform on small screen widths (1080px to 720px)

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -160,7 +160,8 @@ hr {
 }
 
 header {
-  width: 50%;
+  min-width: fit-content;
+  width: 720px;
   margin: auto !important;
   border-radius: 1.3em;
 }
